Added Daily Withdrawal Limit Feature