@@ -1,13 +1,17 @@
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 
 public class Account {
-    private AccountType Acc_Type;
-    private int Acc_no;
+    private final AccountType Acc_Type;
+    private final int Acc_no;
     private int pin;
     private double balance;
-    private List<String> Transaction;
+    private final List<String> Transaction;
+
+    private double withdrawnToday = 0;
+    private LocalDate lastWithdrawalDate = LocalDate.now();
 
     public Account(AccountType Acc_Type, int accountNumber, int pin, double balance) {
         this.Acc_Type = Acc_Type;
@@ -44,7 +48,7 @@ public class Account {
 
     public void addTransaction(String transaction) {
         if(Transaction.size() >= 5)
-            Transaction.remove(0);
+            Transaction.removeFirst();
         Transaction.add(transaction+" at "+ LocalDateTime.now()+" Cur.Bal : "+getBalance());
     }
 
@@ -54,26 +58,56 @@ public class Account {
 
     public void deposit(double amount){
         this.balance += amount;
+        ATM.addCash(amount);
         addTransaction("Deposit : Rs."+amount);
     }
 
     public boolean limitCheck(double amount){
         double limit = (Acc_Type == AccountType.ZERO_BALANCE) ? 10000 : 20000;
 
+        if(Acc_Type == AccountType.SAVINGS){
+            if(balance - amount < 1000){
+                System.out.println("You cannot withdraw this amount as this will get the balance below Minimum Balance");
+                return false;
+            }
+        }
         if(amount > limit){
             System.out.println("Maximum Amount per Time Limit Reached for "+Acc_Type);
             return false;
         }
         return true;
     }
-    public void withdraw(double amount){
+
+    public boolean canWithdraw(double amount){
+        if(!lastWithdrawalDate.equals(LocalDate.now())){
+            withdrawnToday = 0;
+            lastWithdrawalDate = LocalDate.now();
+        }
         if (amount > balance) {
             System.out.println("Insufficient Balance in Account");
-            return;
+            return false;
         }
+        if(Acc_Type == AccountType.SAVINGS){
+            if(withdrawnToday + amount > 100000){
+                System.out.println("Daily Limit Reached");
+                return false;
+            }
+        }
+        else if(Acc_Type == AccountType.ZERO_BALANCE){
+            if(withdrawnToday + amount > 50000){
+                System.out.println("Daily Limit Reached");
+                return false;
+            }
+        }
+        return true;
+    }
 
-        this.balance = this.balance - amount;
-        addTransaction("Withdrawl : Rs."+amount);
-        System.out.println("Withdraw Successful");
+    public void withdraw(double amount){
+        if(canWithdraw(amount)) {
+            this.balance = this.balance - amount;
+            this.withdrawnToday = this.withdrawnToday + amount;
+            addTransaction("Withdrawl : Rs." + amount);
+            System.out.println("Withdraw Successful");
+        }
     }
 }
